[project]
name = "openai-api-proxy"
version = "0.1.0"
description = "Proxy for OpenAI api using python flask, supports SSE streaming."
authors = [
    { name = "damao", email = "xiaoyuguan@hotmail.com" }
]
dependencies = [
    "flask~=2.3.2",
    "requests~=2.31.0",
    "python-dotenv~=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
